test/testcases/malgo/error/StringPatIsNotSupported.mlg
module {..} = import Builtin
module {..} = import Prelude

def isHoge = {
  "hoge" -> True,
  _ -> False
}

def main = {
  if (isHoge "hoge") { putStrLn "OK" } { putStrLn "Err" }
}
